agent.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-agent
  labels:
    app: jenkins-agent
spec:
  serviceAccountName: jenkins-agent-sa
  containers:
  - name: jnlp
    image: jenkins/inbound-agent:latest
    tty: true
    resources:
      limits:
        memory: 512Mi
        cpu: 500m
      requests:
        memory: 256Mi
        cpu: 250m

  - name: docker
    image: docker:latest
    command:
    - cat
    args:
      - --host=tcp://0.0.0.0:2375
      - --host=unix:///var/run/docker.sock
    tty: true
    volumeMounts:
    - name: docker-socket
      mountPath: /var/run/docker.sock

  - name: kubectl
    image: bitnami/kubectl:latest
    command:
      - cat
    tty: true

  volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
